fixed color links article and allow line breaks in footer text

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -107,12 +107,16 @@
 
   #artigos h2,
   #policy h2 {
-    @apply !text-[1.375rem] font-bold mt-8 !text-black;
+    @apply text-[1.375rem] font-bold mt-8 !text-black;
   }
 
   #artigos h3,
   #policy h3 {
     @apply text-[1.125rem] font-bold mt-8 !text-black;
+  }
+
+  #artigo {
+    @apply text-[#666666];
   }
 
   #artigo * {
@@ -121,7 +125,7 @@
 
   #artigo *,
   #artigo :not(h1, h2, h3) {
-    @apply text-[1.125rem] text-[#666666];
+    @apply text-[1.125rem];
   }
 
   #artigo ul {
@@ -132,9 +136,10 @@
     @apply list-decimal space-y-2 pl-5 marker:text-[var(--color-listas)];
   }
 
-  #artigo>a {
-    @apply text-[var(--color-links)] !underline;
+  #artigo a {
+    @apply text-[var(--color-links)] underline;
   }
+
 
   .gprodemi-image-block,
   .imagemPost-radius {
@@ -199,8 +204,8 @@
     @apply flex-1 flex flex-col;
   }
 
-  .blocoApps-textos .blocoApps-link {
-    @apply mt-7.5 md:mt-auto;
+  .blocoApps-link {
+    @apply mt-7.5 md:mt-auto !no-underline;
   }
 
   .blocoApps-t1 {
@@ -221,8 +226,7 @@
 
   .blocoApps-link,
   .block-blocoApps-link {
-    @apply bg-[var(--color-botao)] !text-white px-4 py-1 rounded uppercase mt-4 ml-auto text-center !text-base hover:bg-[var(--color-botao)]/60 transition-colors;
-    text-decoration: none !important;
+    @apply bg-[var(--color-botao)] !text-white px-4 py-1 rounded uppercase mt-4 ml-auto text-center !text-base hover:bg-[var(--color-botao)]/60 transition-colors ;
   }
 
   .block-blocoApps-link {
